[tool.coverage.report]
fail_under = 50
show_missing = true

[tool.coverage.run]
command_line = "-m pytest"
source = ["templatepython", "tests", "main.py"]

[tool.isort]
profile = "black"
src_paths = ["templatepython", "tests"]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
explicit_package_bases = true
files = ["**/*.py"]
namespace_packages = true
show_error_codes = true

[tool.poetry]
name = "templatepython"
version = "0.1.0"
description = "Template repository for Python projects"
authors = ["Brendon Smith <br3ndonland@protonmail.com>"]
license = "MIT"
homepage = "https://github.com/br3ndonland/template-python"
readme = "README.md"
include = ["templatepython/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = ">=22.3.0"
coverage = {version = "^7", extras = ["toml"]}
flake8 = ">=4"
isort = "^5.6"
mkdocs-material = "^9"
mypy = ">0.900,<1"
pre-commit = "^2.8"
pytest = "^7"
pytest-cov = "^4"
pytest-mock = "^3.10"

[tool.poetry.group.dev.dependencies]
mkdocstrings = {extras = ["python"], version = "^0.19.1"}
pre-commit = "^2"

[tool.pytest.ini_options]
addopts = ["--doctest-modules", "--cov=."]
minversion = "6.0"
testpaths = ["main.py", "tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
